routes.rest, swagger updated
